WexGit/Wex_DX/force-app/main/default/objects/Campaign_Code_Generator__c/Campaign_Code_Generator__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration for CampaignCodeGenerator.cls</description>
    <label>Campaign Code Generator</label>
</CustomObject>