WexGit/Wex_DX/force-app/main/default/objects/Campaign_Code_Generator__c/fields/Characters__c.field-meta.xml
<CustomField>
    <fullName>Characters__c</fullName>
    <description>Characters that can be used to generate code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Characters that can be used to generate code</inlineHelpText>
    <label>Characters</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>