WexGit/Wex_DX/force-app/main/default/objects/Campaign_Code_Generator__c/fields/Code_Length__c.field-meta.xml
<CustomField>
    <fullName>Code_Length__c</fullName>
    <description>Length of code to be generated</description>
    <inlineHelpText>Length of code to be generated</inlineHelpText>
    <label>Code Length</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>