WexGit/Wex_DX/force-app/main/default/objects/Campaign_Code_Generator__c/fields/Enabled_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Enabled_Record_Types__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enabled Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>