WexGit/Wex_DX/force-app/main/default/objects/Campaign_Code_Generator__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Number of codes to generate</description>
    <inlineHelpText>Number of codes to generate</inlineHelpText>
    <label>Quantity</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>